--- a/src/components/Login/AdminLogin.module.css
+++ b/src/components/Login/AdminLogin.module.css
@@ -1,13 +1,35 @@
-.logincontainer{
-
-  background-color: rgba(255, 255, 255, 0.87);
-  height: 50vh;
-  width: 50vw;
-  border-radius: 20px;
-  box-shadow: 1rem -1rem 2rem 1rem rgb(182, 175, 175);
-  margin-top: 0;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  
+}
+
+.logincontainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgba(255, 255, 255);
+  height: 70vh;
+  width: 30vw;
+  border-radius: 20px;
+  box-shadow: 0.5rem 1rem rgb(224, 219, 219);
+  margin-top: -25rem;
+  align-items: center;
 
 
+
+}
+
+.formcontainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 40vh;
+  width: 50vw;
+}
+
+.TextField {
+  width: 20vw;
 }
