--- a/src/components/Login/AdminLogin.module.css
+++ b/src/components/Login/AdminLogin.module.css
@@ -20,7 +20,22 @@
 
 
 }
-
+.header{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: left;
+  width: 30vw;
+}
+.admin{
+  text-align: center;
+  width: 10vw;
+  border-bottom: 4px solid lightgray;
+  margin-top: -2rem;
+  margin-bottom: 2rem;
+  cursor: pointer;
+  
+}
 .formcontainer {
   display: flex;
   flex-direction: column;
