--- a/src/components/Login/AdminLogin.module.css
+++ b/src/components/Login/AdminLogin.module.css
@@ -1,10 +1,10 @@
+
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-
 .logincontainer {
   display: flex;
   flex-direction: column;
@@ -34,6 +34,8 @@
   margin-top: -2rem;
   margin-bottom: 2rem;
   cursor: pointer;
+  color: black;
+  text-decoration: none;
   
 }
 .formcontainer {
